Quorum3/Library/Tests/Templating/Fail/PassBooleanTakesNumber_7.quorum
class main
    action main
        Test<number> something
        something:doSomething(true)
    end
end